--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "eslint": "^4.7.2",
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
